--- a/k8s/SERVICES/srvdbapi.yaml
+++ b/k8s/SERVICES/srvdbapi.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: dbapi
+    app: api
   ports:
     - protocol: TCP
       port: 3306   # Puerto en el servicio
